--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,17 @@
 <html lang="en" data-bs-theme="dark">
 <head>
   <meta charset="utf-8">
-  <title>Ngfootball</title>
+  <title>Football Predictions</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="Football Predictions">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://millslogan.github.io/nfl-preds/">
+    <meta property="og:image" content="assets/icon.png">
+    <meta property="og:description" content="A site for viewing and making predictions for the NFL football season.">
+    <meta property="og:site_name" content="Football Predictions">
+
   <link rel="icon" type="image/x-icon" href="assets/icon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
